k8s/04-users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: microservices-ns
  labels:
    app: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
      - name: users-service
        image: alexisj16/users-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: microservices-ns
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
