k8s/05-posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  namespace: microservices-ns
  labels:
    app: posts-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
      - name: posts-service
        image: alexisj16/posts-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
        volumeMounts:
        - name: posts-data
          mountPath: /app/data
      volumes:
      - name: posts-data
        persistentVolumeClaim:
          claimName: posts-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  namespace: microservices-ns
spec:
  type: ClusterIP
  selector:
    app: posts-service
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
