k8s/06-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: microservices-ns
  labels:
    app: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
      - name: client-service
        image: alexisj16/client:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: microservices-ns
spec:
  type: ClusterIP
  selector:
    app: client-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
