k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: microservices-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 5001
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-service
            port:
              number: 5002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
